# Web3-django-aggregator

./: pyproject.toml
Django_Web3_Aggregator/: docker-compose.yml  manage.py  pyproject.toml
Django_Web3_Aggregator/Django_Web3_Aggregator/: asgi.py  settings.py  urls.py  wsgi.py
Django_Web3_Aggregator/Django_Web3_Aggregator/static/css/: footer_navbar.css  layout.css  navbar_connect_wallet.css
Django_Web3_Aggregator/Django_Web3_Aggregator/static/js/: toggle_wallet_form.js
Django_Web3_Aggregator/templates/: base.html  index.html
Django_Web3_Aggregator/templates/components/: footer.html  navbar.html  wallet_connection.html
Django_Web3_Aggregator/wallet_analyzer/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
Django_Web3_Aggregator/wallet_analyzer/cache/: __init__.py  wallet_cache.py
Django_Web3_Aggregator/wallet_analyzer/migrations/: 0001_initial.py  0002_alter_wallet_options.py  0003_alter_wallet_address.py  0004_alter_wallet_address.py
Django_Web3_Aggregator/wallet_analyzer/templates/wallet_analyzer/: base.html  base_wallets.html  index.html  wallet_list.html
Django_Web3_Aggregator/wallet_analyzer/urls/: __init__.py  urls.py
Django_Web3_Aggregator/wallet_analyzer/views/: __init__.py  views.py  wallet_views.py
Django_Web3_Aggregator/wallet_analyzer/wallet_analysis/: __init__.py  utils.py  сonfig.py
Django_Web3_Aggregator/wallet_analyzer/wallet_analysis/services/: __init__.py  nfts_on_wallet.py  tesssst.py  (+2 more)
Django_Web3_Aggregator/web2/: apps.py  urls.py  views.py
Django_Web3_Aggregator/web2/templates/: base.html
(+16 files in other folders)
