[tool.poetry]
name = "django-web3-aggregator"
version = "0.1.0"
description = ""
authors = ["tbone <tufytop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
web3 = "^7.4.0"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
